# bank-widget

./: .coverage  .env  .flake8  .gitignore  README.md  debug_data_loaders.py  debug_mask_run.py  debug_utils_run.py  main.py  pyproject.toml
src/: data_loaders.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
src/masks/: masks.py
tests/: conftest.py  test_data_loaders.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
