[tool.poetry]
name = "bank-widget"
version = "0.1.0"
description = ""
authors = ["GuyMonagan <werevalkcury@gmail.com>"]
readme = "README.md"
packages = [
    { include = "masks", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[tool.flake8]
max-line-length = 119
exclude = '''
/(
    \.git
    __pycache__
    venv
)/
'''


[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]

